src/tests/fixtures/comments/detachedBlockCommentWithInvalidTagName.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlTyp
 */
/**
 * Foo
 */

-----------------
OUTPUT
-----------------
src/tests/fixtures/comments/detachedBlockCommentWithInvalidTagName.invalid.ts:2:4 - error: `@gqlTyp` is not a valid Grats tag. Valid tags are: `@gqlType`, `@gqlField`, `@gqlScalar`, `@gqlInterface`, `@gqlEnum`, `@gqlUnion`, `@gqlInput`, `@gqlDirective`, `@gqlAnnotate`.

2  * @gqlTyp
     ~~~~~~~
src/tests/fixtures/comments/detachedBlockCommentWithInvalidTagName.invalid.ts:2:4 - error: Unexpected Grats tag in detached docblock. Grats was unable to determine which TypeScript declaration this docblock is associated with. Moving the docblock to a position with is unambiguously "above" the relevant declaration may help. For more information see: https://grats.capt.dev/docs/getting-started/comment-syntax

2  * @gqlTyp
     ~~~~~~~
